move image to filter to prevent loading directory if image is empty

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
        <script src="scripts/app.js"></script>
        <script src="scripts/controllers/main.js"></script>
        <script src="scripts/services/services.js"></script>
+       <script src="scripts/filters/tvdbbanner.js"></script>
        <!-- endbuild -->
        <div id="push"></div>
      </div>
