move Series service to own file

--- a/app/index.html
+++ b/app/index.html
@@ -56,8 +56,8 @@
        <script src="bower_components/js-sorted-set/sorted-set.no-require.js"></script>
        <script src="scripts/app.js"></script>
        <script src="scripts/controllers/main.js"></script>
-       <script src="scripts/services/services.js"></script>
        <script src="scripts/filters/tvdbbanner.js"></script>
+       <script src="scripts/services/Series.js"></script>
        <!-- endbuild -->
        <div id="push"></div>
      </div>
